security: Remove hardcoded credentials and add secure credential generation
- Update docker-compose.yml to use environment variables for all credentials
- Add secure credential generation script
- Update env.example with better security defaults
- Add security best practices to README
- Ensure all passwords and keys are pulled from environment variables
- Add comments about production security requirements

--- a/env.example
+++ b/env.example
@@ -1,7 +1,8 @@
 # Neo4j Configuration
+# Change these values for production use
 NEO4J_URI=bolt://localhost:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=password
+NEO4J_PASSWORD=your-secure-password-here
 NEO4J_DATABASE=neo4j
 
 # Server Configuration
@@ -13,5 +14,6 @@ DEBUG=false
 LOG_LEVEL=INFO
 
 # Security
+# Generate a secure random key for production: python -c "import secrets; print(secrets.token_urlsafe(32))"
 SECRET_KEY=your-secret-key-here-change-in-production
 ACCESS_TOKEN_EXPIRE_MINUTES=30
